[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Level1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/TetBlocks/TetI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TetBlocks/TetS.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TetBlocks/Block_30x1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/TetBlocks/TetZ.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/NPC.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/PixelFont2.tres" type="DynamicFont" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Blocks" type="Node2D" parent="."]

[node name="TetI" parent="Blocks" instance=ExtResource( 2 )]
modulate = Color( 1, 0.584314, 0, 1 )
position = Vector2( 48, 112 )

[node name="TetI3" parent="Blocks" instance=ExtResource( 2 )]
modulate = Color( 1, 0.584314, 0, 1 )
position = Vector2( 56, 80 )
rotation = 4.71239

[node name="TetI4" parent="Blocks" instance=ExtResource( 2 )]
modulate = Color( 1, 0.584314, 0, 1 )
position = Vector2( 96, 72 )
rotation = 1.5708

[node name="TetI2" parent="Blocks" instance=ExtResource( 2 )]
modulate = Color( 1, 0.584314, 0, 1 )
position = Vector2( 96, 112 )

[node name="TetS" parent="Blocks" instance=ExtResource( 3 )]
modulate = Color( 1, 0.843137, 0, 1 )
position = Vector2( 56, 88 )

[node name="Block_30x1" parent="Blocks" instance=ExtResource( 4 )]
position = Vector2( 32, 128 )
isStatic = true

[node name="TetZ" parent="Blocks" instance=ExtResource( 5 )]
modulate = Color( 1, 0.843137, 0, 1 )
position = Vector2( 96, 88 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="Background" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Countdown" type="Timer" parent="."]

[node name="NPC" parent="." instance=ExtResource( 7 )]
position = Vector2( 76, 115 )

[node name="TimeLeft" type="Label" parent="."]
margin_left = 28.0
margin_top = 4.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.529412 )
text = "Time left :"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
